# Sism

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt  folders  header.h  main.cpp  todo_mvp.md  todo_poc.md
application/: application.cpp  application.h  state.cpp  state.h
application/controller/: system-services-controller.cpp  system-services-controller.h
application/ui/: main-window.cpp  main-window.h
application/ui/component/property-value-list-row/: property-value-list-row.cpp  property-value-list-row.h
application/ui/component/service-details-section/: service-details-section.cpp  service-details-section.h
application/ui/component/service-property/: service-property.cpp  service-property.h
application/ui/component/title-header/: title-header.cpp  title-header.h
assets/: io.github.luizgfc.sism.json  sism.desktop  sism.spec
client/dbus/systemd/: systemd-manager.cpp  systemd-manager.h
component/service-property/: service-property.cpp  service-property.h
module/logger/: logger.h
module/services/: system-services-manager.cpp  system-services-manager.h
module/string-tools/: to-uppercase.cpp  to-uppercase.h
module/system-services-manager/: system-services-manager.cpp  system-services-manager.h
prototype/dbus/: CMakeLists.txt  main.cpp
prototype/gtk/: CMakeLists.txt  main.cpp
provider/dbus/: connection.h
provider/dbus/polkit/: interface-properties.h  method-names.h  policykit-1-authority.cpp  policykit-1-authority.h  properties.h
provider/dbus/polkit/dto/: check-authorization-flags.h  check-authorization-request.h  check-authorization-result.h
provider/dbus/systemd/: interface-properties.h  method-names.h  properties.h  systemd-manager.cpp  systemd-manager.h
provider/dbus/systemd/dto/: dto.h  enable-unit-files.response.h  list-unit-files-response.h  list-units-response.h  unit-operation-mode.cpp  unit-operation-mode.h
provider/polkit/: polkit-authorization.h  polkit-provider.cpp  polkit-provider.h
provider/systemd/: enablement-status.h  job.h  systemd-provider.cpp  systemd-provider.h  unit-file.cpp  unit-file.h  unit.cpp  unit.h
tools/: Dockerfile.fedora  Dockerfile.ubuntu  compile.sh  control  dependencies-fedora.sh  dependencies-ubuntu.sh  full-run.sh  install.sh  release.sh  run.sh  sism.spec.in
